<resources>
    <string name="app_name">SAUCE Manager</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Ustawienia</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="transactions">OPERACJE</string>
    <string name="reminders">PRZYPOMNIENIA</string>
    <string name="forecast">PROGNOZA</string>
    <string name="this_is_logo_of_this_app">Oto logo tej aplikacji</string>
    <string name="outcomes">Wydatki</string>
    <string name="incomes">Przychody</string>
    <string name="day">Dzień</string>
    <string name="week">Tydzień</string>
    <string name="month">Miesiąc</string>
    <string name="year">Rok</string>
    <string name="amount">Kwota</string>
    <string name="title_optional">Tytuł (opcjonalnie)</string>
    <string name="add_transaction">Dodaj operację</string>
    <string name="add_reminder">Nowe przypomnienie</string>
    <string name="this_is_an_image_of_category">Oto obraz kategorii</string>
    <string name="last_operations">Ostatnie operacje</string>
    <string name="your_reminders">Twoje przypomnienia</string>
    <string name="forecast_small">Prognoza</string>
    <string name="calculate_forecast">Wylicz prognozę</string>
    <string name="spendings_this_month">Wydatki w tym miesiącu</string>
    <string name="your_balance">Twój bilans</string>
    <string name="dummy_1">1228,25 zł</string>
    <string name="future_balance">Przyszły bilans</string>
    <string name="dummy_2">5216,23 zł</string>
    <string name="click_chart_to_see_detailed_statistics">Naciśnij na wykres, by zobaczyć statystyki</string>
    <string name="see_all">Wszystkie</string>
    <string name="back_to_main">Powrót</string>
    <string name="enabled">Włączone:</string>
    <string name="click_to_disable_alarm">Naciśnij, by wyłączyć alarm</string>
    <string name="add_update">Dodaj/Aktualizuj</string>
    <string name="delete">Usuń</string>
    <string name="all_transactions">Wszystkie operacje</string>
    <string name="operations_statistics">Statystyki</string>
    <string name="operation_s_crud_screen_add">Dodaj operację</string>
    <string name="operation_s_crud_screen_update">Aktualizuj operację</string>
    <string name="reminder_s_crud_screen">Ekran CRUD przypomnień</string>
    <string name="update">Aktualizuj</string>
    <string name="_2019_10_17_23_23_12">2019-10-17 23:23:12</string>
    <string name="type_in_new_title_to_update">Wpisz nowy tytuł (opcjonalny)</string>
    <string name="type_in_new_amount_to_update">Wpisz nową kwotę</string>
    <string name="type_in_title_to_update">Wpisz tytuł (opcjonalny)</string>
    <string name="type_in_amount_to_update">Wpisz kwotę</string>
    <string name="balance_of_the_account">Bilans konta</string>
    <string name="cash_flow">Przepływ gotówki</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main">GŁÓWNA</string>
    <string name="statistics">STATYSTYKI</string>
    <string name="update_button">Aktualizuj</string>
    <string name="add_button">Dodaj</string>
    <string name="typ_operacji">Typ operacji:</string>
    <string name="przych_d">Przychód</string>
    <string name="wydatek">Wydatek</string>
    <string name="resetuj_filtry">Resetuj filtry</string>
    <string name="liczba_operacji">Liczba operacji: %1$d</string>
    <string name="ubrania">Ubrania</string>
    <string name="rozrywka">Rozrywka</string>
    <string name="jedzenie">Jedzenie</string>
    <string name="zdrowie">Zdrowie</string>
    <string name="art_domowe">Art. domowe</string>
    <string name="sport">Sport</string>
    <string name="transport">Transport</string>
    <string name="inne">Inne</string>
    <string name="kategoria">Kategoria</string>
    <string name="zazwyczaj">Zazwyczaj</string>
    <string name="do_teraz">Do teraz</string>
    <string name="pozostalo">Pozostało</string>
    <string name="inwestycje">Inwestycje</string>
    <string name="pensja">Pensja</string>
    <string name="oszczednosci">Oszczędności</string>
    <string name="wszystkie">Wszystkie</string>


    <!--    <string name="app_name">SAUCE Manager</string>-->
    <!--    <string name="title_activity_tabbed">TabbedActivity</string>-->
    <!--    <string name="action_settings">Settings</string>-->
    <!--    <string name="section_format">Hello World from section: %1$d</string>-->
    <!--    <string name="transactions">OPERATIONS</string>-->
    <!--    <string name="reminders">REMINDERS</string>-->
    <!--    <string name="forecast">FORECAST</string>-->
    <!--    <string name="this_is_logo_of_this_app">This is logo of this app</string>-->
    <!--    <string name="outcomes">Outcomes</string>-->
    <!--    <string name="incomes">Incomes</string>-->
    <!--    <string name="day">Day</string>-->
    <!--    <string name="week">Week</string>-->
    <!--    <string name="month">Month</string>-->
    <!--    <string name="year">Year</string>-->
    <!--    <string name="amount">Amount</string>-->
    <!--    <string name="title_optional">Title (optional)</string>-->
    <!--    <string name="add_transaction">Add operation</string>-->
    <!--    <string name="add_reminder">New reminder</string>-->
    <!--    <string name="this_is_an_image_of_category">This is an image of category</string>-->
    <!--    <string name="last_operations">Last Operations</string>-->
    <!--    <string name="your_reminders">Your Reminders</string>-->
    <!--    <string name="forecast_small">Forecast</string>-->
    <!--    <string name="calculate_forecast">Calculate Forecast</string>-->
    <!--    <string name="spendings_this_month">Spendings this month</string>-->
    <!--    <string name="your_balance">Your balance</string>-->
    <!--    <string name="dummy_1">1228,25 zł</string>-->
    <!--    <string name="future_balance">Future balance</string>-->
    <!--    <string name="dummy_2">5216,23 zł</string>-->
    <!--    <string name="click_chart_to_see_detailed_statistics">Click chart to see detailed statistics</string>-->
    <!--    <string name="see_all">See all</string>-->
    <!--    <string name="back_to_main">Back to main</string>-->
    <!--    <string name="enabled">Enabled:</string>-->
    <!--    <string name="click_to_disable_alarm">Click to disable alarm</string>-->
    <!--    <string name="add_update">Add/Update</string>-->
    <!--    <string name="delete">Delete</string>-->
    <!--    <string name="type_in_new_title_to_update">Type in new title to update</string>-->
    <!--    <string name="all_transactions">All Transactions</string>-->
    <!--    <string name="operations_statistics">Statistics</string>-->
    <!--    <string name="operation_s_crud_screen">Operation\'s CRUD screen</string>-->
    <!--    <string name="reminder_s_crud_screen">Reminder\'s CRUD screen</string>-->
    <!--    <string name="update">Update</string>-->
    <!--    <string name="_2019_10_17_23_23_12">2019-10-17 23:23:12</string>-->
    <!--    <string name="type_in_new_amount_to_update">Type in new amount to update</string>-->
    <!--    <string name="balance_of_the_account">Balance of the Account</string>-->
    <!--    <string name="cash_flow">Cash Flow</string>-->
</resources>
