<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorScreenBackground"
            android:minWidth="80dp">

            <TextView
                android:id="@+id/forecastTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/forecast_small"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewYB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="@string/your_balance"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecastTextView" />

            <TextView
                android:id="@+id/textViewNOW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:text="@string/dummy_1"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewYB" />

            <TextView
                android:id="@+id/textViewFB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/future_balance"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNOW" />

            <TextView
                android:id="@+id/textViewFUT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="306dp"
                android:text="@string/dummy_2"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFB" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFUT">

                <Spinner
                    android:id="@+id/forecastSpinner"
                    android:layout_marginEnd="20dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:maxWidth="50pt"
                    android:minWidth="160dp" />

                <Button
                    android:id="@+id/forecastButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/calculate_forecast" />

            </LinearLayout>

            <TextView
                android:id="@+id/spendingsThisMonthTextView"
                android:textSize="26sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="176dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="176dp"
                android:text="@string/spendings_this_month"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TableLayout
                android:layout_width="395dp"
                android:layout_height="397dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spendingsThisMonthTextView">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>